--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="index.css">
-  <script src="bower_components/react/JSXTransformer.js"></script>
-  <script src="bower_components/react/react-with-addons.js"></script>
+  <script src="JSXTransformer.js"></script>
+  <script src="react-with-addons.js"></script>
   <script src="index.jsx" type="text/jsx"></script>
 </head>
 <body>
